Fixed navbar collapse issue

--- a/examples/client/stylesheets/style.css
+++ b/examples/client/stylesheets/style.css
@@ -7,13 +7,23 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
 }
 
+.navbar-nav {
+  float: left;
+  margin: 0;
+}
+
 .navbar-default {
   box-shadow: 0 3px 2px -3px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   border: #e3e9ec;
 }
 
+.navbar-default .navbar-nav > li {
+  float: left;
+}
+
 .navbar-default .navbar-nav > li > a {
+  padding: 15px;
   color: #848484;
 }
 
@@ -23,6 +33,19 @@ h1, h2, h3, h4, h5, h6 {
   color: #333;
   background-color: #f7f7f7;
 }
+
+.navbar-header {
+  float: left;
+  padding-left: 15px;
+}
+
+.navbar-brand {
+  background-color: #ffe939;
+  transition: 0.25s all;
+  margin-left: -15px;
+}
+
+
 
 .panel {
   border-color: #cfd9D7;
